# ai-eval-catalan

./: README.md
asr/: hf-eval.py  pyproject.toml
llm/: model.py  pagina.html  pyproject.toml  run.sh  run_evals.py  summarize_results.py
llm/evals/: results_aya_expanse_8b.json  results_eurollm_9b.json  results_gemini_3_1_preview.json  results_gemini_3_flash_preview.json  results_gemma3_12b.json  results_gemma3_1b.json  results_gemma4_26b_q4.json  results_gemma4_26b_q8.json  results_gemma4_e4b.json  results_gpt_5_4.json  results_gpt_oss_20b.json  results_llama3.1_8b.json  results_mistral_small_24b.json  results_qwen3.5_9b.json  results_qwen3_14b.json
